Fix bug with footer moving too much in the y axis when zooming in and out of screen

--- a/styles/style.css
+++ b/styles/style.css
@@ -132,7 +132,7 @@ footer {
     width: 100%;
     height: auto;
     background-color: #b6bbc444;
-    margin-top: 6em;
+    margin-top: 5vw;
     padding-top: .5%;
     padding-bottom: .5%;
     justify-content: flex-end;
